parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> _1_repeat
Rule 3     _1_repeat -> _1_items
Rule 4     _1_repeat -> <empty>
Rule 5     _1_items -> _1_items _1_item
Rule 6     _1_items -> _1_item
Rule 7     _1_item -> statement
Rule 8     statement -> expression SEMI
Rule 9     statement -> const_definition
Rule 10    statement -> variable_definition
Rule 11    statement -> assignment_statement
Rule 12    statement -> print_statement
Rule 13    print_statement -> PRINT expression SEMI
Rule 14    assignment_statement -> location ASSIGN expression SEMI
Rule 15    variable_definition -> VAR NAME type _2_optional SEMI
Rule 16    _2_optional -> ASSIGN expression
Rule 17    _2_optional -> <empty>
Rule 18    variable_definition -> VAR NAME _3_optional ASSIGN expression SEMI
Rule 19    _3_optional -> type
Rule 20    _3_optional -> <empty>
Rule 21    const_definition -> CONST NAME _4_optional ASSIGN expression SEMI
Rule 22    _4_optional -> type
Rule 23    _4_optional -> <empty>
Rule 24    func_definition -> FUNC NAME LPAREN _5_optional RPAREN NAME LBRACE statements RBRACE
Rule 25    _5_optional -> parameters
Rule 26    _5_optional -> <empty>
Rule 27    parameters -> empty
Rule 28    parameters -> parameter _6_repeat
Rule 29    _6_repeat -> _6_items
Rule 30    _6_repeat -> <empty>
Rule 31    _6_items -> _6_items _6_item
Rule 32    _6_items -> _6_item
Rule 33    _6_item -> COMMA parameter
Rule 34    parameter -> NAME NAME
Rule 35    struct_definition -> STRUCT NAME LBRACE _7_repeat RBRACE
Rule 36    _7_repeat -> _7_items
Rule 37    _7_repeat -> <empty>
Rule 38    _7_items -> _7_items _7_item
Rule 39    _7_items -> _7_item
Rule 40    _7_item -> struct_field
Rule 41    struct_field -> NAME NAME SEMI
Rule 42    enum_definition -> ENUM NAME LBRACE _8_repeat RBRACE
Rule 43    _8_repeat -> _8_items
Rule 44    _8_repeat -> <empty>
Rule 45    _8_items -> _8_items _8_item
Rule 46    _8_items -> _8_item
Rule 47    _8_item -> enum_choice
Rule 48    enum_choice -> NAME LPAREN NAME RPAREN
Rule 49    enum_choice -> NAME SEMI
Rule 50    if_statement -> IF expression LBRACE statements RBRACE _9_optional
Rule 51    _9_optional -> ELSE LBRACE statements RBRACE
Rule 52    _9_optional -> <empty>
Rule 53    if_let_statement -> IF LET pattern ASSIGN expression LBRACE statements RBRACE _10_optional
Rule 54    _10_optional -> ELSE LBRACE statements RBRACE
Rule 55    _10_optional -> <empty>
Rule 56    expression -> orterm _11_repeat
Rule 57    _11_repeat -> _11_items
Rule 58    _11_repeat -> <empty>
Rule 59    _11_items -> _11_items _11_item
Rule 60    _11_items -> _11_item
Rule 61    _11_item -> LOR orterm  [precedence=left, level=1]
Rule 62    orterm -> andterm _12_repeat
Rule 63    _12_repeat -> _12_items
Rule 64    _12_repeat -> <empty>
Rule 65    _12_items -> _12_items _12_item
Rule 66    _12_items -> _12_item
Rule 67    _12_item -> LAND andterm  [precedence=left, level=2]
Rule 68    andterm -> sumterm _13_repeat
Rule 69    _13_repeat -> _13_items
Rule 70    _13_repeat -> <empty>
Rule 71    _13_items -> _13_items _13_item
Rule 72    _13_items -> _13_item
Rule 73    _13_item -> compare_op sumterm
Rule 74    compare_op -> NE  [precedence=left, level=3]
Rule 75    compare_op -> EQ  [precedence=left, level=3]
Rule 76    compare_op -> GE  [precedence=left, level=3]
Rule 77    compare_op -> GT  [precedence=left, level=3]
Rule 78    compare_op -> LE  [precedence=left, level=3]
Rule 79    compare_op -> LT  [precedence=left, level=3]
Rule 80    sumterm -> multerm _14_repeat
Rule 81    _14_repeat -> _14_items
Rule 82    _14_repeat -> <empty>
Rule 83    _14_items -> _14_items _14_item
Rule 84    _14_items -> _14_item
Rule 85    _14_item -> MINUS multerm  [precedence=left, level=4]
Rule 86    sumterm -> multerm _15_repeat
Rule 87    _15_repeat -> _15_items
Rule 88    _15_repeat -> <empty>
Rule 89    _15_items -> _15_items _15_item
Rule 90    _15_items -> _15_item
Rule 91    _15_item -> PLUS multerm  [precedence=left, level=4]
Rule 92    multerm -> factor _16_repeat
Rule 93    _16_repeat -> _16_items
Rule 94    _16_repeat -> <empty>
Rule 95    _16_items -> _16_items _16_item
Rule 96    _16_items -> _16_item
Rule 97    _16_item -> DIVIDE factor  [precedence=left, level=5]
Rule 98    multerm -> factor _17_repeat
Rule 99    _17_repeat -> _17_items
Rule 100   _17_repeat -> <empty>
Rule 101   _17_items -> _17_items _17_item
Rule 102   _17_items -> _17_item
Rule 103   _17_item -> TIMES factor  [precedence=left, level=5]
Rule 104   continue_statement -> CONTINUE SEMI
Rule 105   return_statement -> RETURN expression SEMI
Rule 106   factor -> LBRACE statements RBRACE
Rule 107   factor -> NAME LPAREN exprlist RPAREN
Rule 108   factor -> MINUS expression  [precedence=right, level=6]
Rule 109   factor -> LNOT expression  [precedence=right, level=6]
Rule 110   factor -> LPAREN expression RPAREN
Rule 111   factor -> literal
Rule 112   factor -> match
Rule 113   factor -> enum_value
Rule 114   factor -> location
Rule 115   literal -> FALSE
Rule 116   literal -> TRUE
Rule 117   literal -> CHAR
Rule 118   literal -> FLOAT
Rule 119   literal -> INTEGER
Rule 120   literal -> LPAREN RPAREN
Rule 121   exprlist -> empty
Rule 122   exprlist -> expression _18_repeat
Rule 123   _18_repeat -> _18_items
Rule 124   _18_repeat -> <empty>
Rule 125   _18_items -> _18_items _18_item
Rule 126   _18_items -> _18_item
Rule 127   _18_item -> COMMA expression
Rule 128   location -> expression DOT NAME
Rule 129   location -> NAME
Rule 130   enum_value -> NAME DCOLON NAME LPAREN expression RPAREN
Rule 131   enum_value -> NAME DCOLON NAME
Rule 132   match -> MATCH expression LBRACE _19_repeat RBRACE
Rule 133   _19_repeat -> _19_items
Rule 134   _19_repeat -> <empty>
Rule 135   _19_items -> _19_items _19_item
Rule 136   _19_items -> _19_item
Rule 137   _19_item -> matchcase
Rule 138   matchcase -> pattern ARROW expression SEMI
Rule 139   pattern -> NAME
Rule 140   pattern -> NAME LPAREN NAME RPAREN
Rule 141   type -> NAME
Rule 142   empty -> <empty>

Unused terminals:

    BREAK
    WHILE

Terminals, with rules where they appear:

ARROW                : 138
ASSIGN               : 14 16 18 21 53
BREAK                : 
CHAR                 : 117
COMMA                : 33 127
CONST                : 21
CONTINUE             : 104
DCOLON               : 130 131
DIVIDE               : 97
DOT                  : 128
ELSE                 : 51 54
ENUM                 : 42
EQ                   : 75
FALSE                : 115
FLOAT                : 118
FUNC                 : 24
GE                   : 76
GT                   : 77
IF                   : 50 53
INTEGER              : 119
LAND                 : 67
LBRACE               : 24 35 42 50 51 53 54 106 132
LE                   : 78
LET                  : 53
LNOT                 : 109
LOR                  : 61
LPAREN               : 24 48 107 110 120 130 140
LT                   : 79
MATCH                : 132
MINUS                : 85 108
NAME                 : 15 18 21 24 24 34 34 35 41 41 42 48 48 49 107 128 129 130 130 131 131 139 140 140 141
NE                   : 74
PLUS                 : 91
PRINT                : 13
RBRACE               : 24 35 42 50 51 53 54 106 132
RETURN               : 105
RPAREN               : 24 48 107 110 120 130 140
SEMI                 : 8 13 14 15 18 21 41 49 104 105 138
STRUCT               : 35
TIMES                : 103
TRUE                 : 116
VAR                  : 15 18
WHILE                : 
error                : 

Nonterminals, with rules where they appear:

_10_optional         : 53
_11_item             : 59 60
_11_items            : 57 59
_11_repeat           : 56
_12_item             : 65 66
_12_items            : 63 65
_12_repeat           : 62
_13_item             : 71 72
_13_items            : 69 71
_13_repeat           : 68
_14_item             : 83 84
_14_items            : 81 83
_14_repeat           : 80
_15_item             : 89 90
_15_items            : 87 89
_15_repeat           : 86
_16_item             : 95 96
_16_items            : 93 95
_16_repeat           : 92
_17_item             : 101 102
_17_items            : 99 101
_17_repeat           : 98
_18_item             : 125 126
_18_items            : 123 125
_18_repeat           : 122
_19_item             : 135 136
_19_items            : 133 135
_19_repeat           : 132
_1_item              : 5 6
_1_items             : 3 5
_1_repeat            : 2
_2_optional          : 15
_3_optional          : 18
_4_optional          : 21
_5_optional          : 24
_6_item              : 31 32
_6_items             : 29 31
_6_repeat            : 28
_7_item              : 38 39
_7_items             : 36 38
_7_repeat            : 35
_8_item              : 45 46
_8_items             : 43 45
_8_repeat            : 42
_9_optional          : 50
andterm              : 62 67
assignment_statement : 11
compare_op           : 73
const_definition     : 9
continue_statement   : 
empty                : 27 121
enum_choice          : 47
enum_definition      : 
enum_value           : 113
expression           : 8 13 14 16 18 21 50 53 105 108 109 110 122 127 128 130 132 138
exprlist             : 107
factor               : 92 97 98 103
func_definition      : 
if_let_statement     : 
if_statement         : 
literal              : 111
location             : 14 114
match                : 112
matchcase            : 137
multerm              : 80 85 86 91
orterm               : 56 61
parameter            : 28 33
parameters           : 25
pattern              : 53 138
print_statement      : 12
program              : 0
return_statement     : 
statement            : 7
statements           : 1 24 50 51 53 54 106
struct_definition    : 
struct_field         : 40
sumterm              : 68 73
type                 : 15 19 22
variable_definition  : 10


state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . _1_repeat
    (3) _1_repeat -> . _1_items
    (4) _1_repeat -> .
    (5) _1_items -> . _1_items _1_item
    (6) _1_items -> . _1_item
    (7) _1_item -> . statement
    (8) statement -> . expression SEMI
    (9) statement -> . const_definition
    (10) statement -> . variable_definition
    (11) statement -> . assignment_statement
    (12) statement -> . print_statement
    (56) expression -> . orterm _11_repeat
    (21) const_definition -> . CONST NAME _4_optional ASSIGN expression SEMI
    (15) variable_definition -> . VAR NAME type _2_optional SEMI
    (18) variable_definition -> . VAR NAME _3_optional ASSIGN expression SEMI
    (14) assignment_statement -> . location ASSIGN expression SEMI
    (13) print_statement -> . PRINT expression SEMI
    (62) orterm -> . andterm _12_repeat
    (128) location -> . expression DOT NAME
    (129) location -> . NAME
    (68) andterm -> . sumterm _13_repeat
    (80) sumterm -> . multerm _14_repeat
    (86) sumterm -> . multerm _15_repeat
    (92) multerm -> . factor _16_repeat
    (98) multerm -> . factor _17_repeat
    (106) factor -> . LBRACE statements RBRACE
    (107) factor -> . NAME LPAREN exprlist RPAREN
    (108) factor -> . MINUS expression
    (109) factor -> . LNOT expression
    (110) factor -> . LPAREN expression RPAREN
    (111) factor -> . literal
    (112) factor -> . match
    (113) factor -> . enum_value
    (114) factor -> . location
    (115) literal -> . FALSE
    (116) literal -> . TRUE
    (117) literal -> . CHAR
    (118) literal -> . FLOAT
    (119) literal -> . INTEGER
    (120) literal -> . LPAREN RPAREN
    (132) match -> . MATCH expression LBRACE _19_repeat RBRACE
    (130) enum_value -> . NAME DCOLON NAME LPAREN expression RPAREN
    (131) enum_value -> . NAME DCOLON NAME
    $end            reduce using rule 4 (_1_repeat -> .)
    CONST           shift and go to state 13
    VAR             shift and go to state 15
    PRINT           shift and go to state 17
    NAME            shift and go to state 14
    LBRACE          shift and go to state 22
    MINUS           shift and go to state 24
    LNOT            shift and go to state 25
    LPAREN          shift and go to state 23
    FALSE           shift and go to state 29
    TRUE            shift and go to state 30
    CHAR            shift and go to state 31
    FLOAT           shift and go to state 32
    INTEGER         shift and go to state 33
    MATCH           shift and go to state 34

    program                        shift and go to state 1
    statements                     shift and go to state 2
    _1_repeat                      shift and go to state 3
    _1_items                       shift and go to state 4
    _1_item                        shift and go to state 5
    statement                      shift and go to state 6
    expression                     shift and go to state 7
    const_definition               shift and go to state 8
    variable_definition            shift and go to state 9
    assignment_statement           shift and go to state 10
    print_statement                shift and go to state 11
    orterm                         shift and go to state 12
    location                       shift and go to state 16
    andterm                        shift and go to state 18
    sumterm                        shift and go to state 19
    multerm                        shift and go to state 20
    factor                         shift and go to state 21
    literal                        shift and go to state 26
    match                          shift and go to state 27
    enum_value                     shift and go to state 28

state 1

    (0) S' -> program .


state 2

    (1) program -> statements .
    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> _1_repeat .
    $end            reduce using rule 2 (statements -> _1_repeat .)
    RBRACE          reduce using rule 2 (statements -> _1_repeat .)


state 4

    (3) _1_repeat -> _1_items .
    (5) _1_items -> _1_items . _1_item
    (7) _1_item -> . statement
    (8) statement -> . expression SEMI
    (9) statement -> . const_definition
    (10) statement -> . variable_definition
    (11) statement -> . assignment_statement
    (12) statement -> . print_statement
    (56) expression -> . orterm _11_repeat
    (21) const_definition -> . CONST NAME _4_optional ASSIGN expression SEMI
    (15) variable_definition -> . VAR NAME type _2_optional SEMI
    (18) variable_definition -> . VAR NAME _3_optional ASSIGN expression SEMI
    (14) assignment_statement -> . location ASSIGN expression SEMI
    (13) print_statement -> . PRINT expression SEMI
    (62) orterm -> . andterm _12_repeat
    (128) location -> . expression DOT NAME
    (129) location -> . NAME
    (68) andterm -> . sumterm _13_repeat
    (80) sumterm -> . multerm _14_repeat
    (86) sumterm -> . multerm _15_repeat
    (92) multerm -> . factor _16_repeat
    (98) multerm -> . factor _17_repeat
    (106) factor -> . LBRACE statements RBRACE
    (107) factor -> . NAME LPAREN exprlist RPAREN
    (108) factor -> . MINUS expression
    (109) factor -> . LNOT expression
    (110) factor -> . LPAREN expression RPAREN
    (111) factor -> . literal
    (112) factor -> . match
    (113) factor -> . enum_value
    (114) factor -> . location
    (115) literal -> . FALSE
    (116) literal -> . TRUE
    (117) literal -> . CHAR
    (118) literal -> . FLOAT
    (119) literal -> . INTEGER
    (120) literal -> . LPAREN RPAREN
    (132) match -> . MATCH expression LBRACE _19_repeat RBRACE
    (130) enum_value -> . NAME DCOLON NAME LPAREN expression RPAREN
    (131) enum_value -> . NAME DCOLON NAME
    $end            reduce using rule 3 (_1_repeat -> _1_items .)
    RBRACE          reduce using rule 3 (_1_repeat -> _1_items .)
    CONST           shift and go to state 13
    VAR             shift and go to state 15
    PRINT           shift and go to state 17
    NAME            shift and go to state 14
    LBRACE          shift and go to state 22
    MINUS           shift and go to state 24
    LNOT            shift and go to state 25
    LPAREN          shift and go to state 23
    FALSE           shift and go to state 29
    TRUE            shift and go to state 30
    CHAR            shift and go to state 31
    FLOAT           shift and go to state 32
    INTEGER         shift and go to state 33
    MATCH           shift and go to state 34

    _1_item                        shift and go to state 35
    statement                      shift and go to state 6
    expression                     shift and go to state 7
    const_definition               shift and go to state 8
    variable_definition            shift and go to state 9
    assignment_statement           shift and go to state 10
    print_statement                shift and go to state 11
    orterm                         shift and go to state 12
    location                       shift and go to state 16
    andterm                        shift and go to state 18
    sumterm                        shift and go to state 19
    multerm                        shift and go to state 20
    factor                         shift and go to state 21
    literal                        shift and go to state 26
    match                          shift and go to state 27
    enum_value                     shift and go to state 28

state 5

    (6) _1_items -> _1_item .
    CONST           reduce using rule 6 (_1_items -> _1_item .)
    VAR             reduce using rule 6 (_1_items -> _1_item .)
    PRINT           reduce using rule 6 (_1_items -> _1_item .)
    NAME            reduce using rule 6 (_1_items -> _1_item .)
    LBRACE          reduce using rule 6 (_1_items -> _1_item .)
    MINUS           reduce using rule 6 (_1_items -> _1_item .)
    LNOT            reduce using rule 6 (_1_items -> _1_item .)
    LPAREN          reduce using rule 6 (_1_items -> _1_item .)
    FALSE           reduce using rule 6 (_1_items -> _1_item .)
    TRUE            reduce using rule 6 (_1_items -> _1_item .)
    CHAR            reduce using rule 6 (_1_items -> _1_item .)
    FLOAT           reduce using rule 6 (_1_items -> _1_item .)
    INTEGER         reduce using rule 6 (_1_items -> _1_item .)
    MATCH           reduce using rule 6 (_1_items -> _1_item .)
    $end            reduce using rule 6 (_1_items -> _1_item .)
    RBRACE          reduce using rule 6 (_1_items -> _1_item .)


state 6

    (7) _1_item -> statement .
    CONST           reduce using rule 7 (_1_item -> statement .)
    VAR             reduce using rule 7 (_1_item -> statement .)
    PRINT           reduce using rule 7 (_1_item -> statement .)
    NAME            reduce using rule 7 (_1_item -> statement .)
    LBRACE          reduce using rule 7 (_1_item -> statement .)
    MINUS           reduce using rule 7 (_1_item -> statement .)
    LNOT            reduce using rule 7 (_1_item -> statement .)
    LPAREN          reduce using rule 7 (_1_item -> statement .)
    FALSE           reduce using rule 7 (_1_item -> statement .)
    TRUE            reduce using rule 7 (_1_item -> statement .)
    CHAR            reduce using rule 7 (_1_item -> statement .)
    FLOAT           reduce using rule 7 (_1_item -> statement .)
    INTEGER         reduce using rule 7 (_1_item -> statement .)
    MATCH           reduce using rule 7 (_1_item -> statement .)
    $end            reduce using rule 7 (_1_item -> statement .)
    RBRACE          reduce using rule 7 (_1_item -> statement .)


state 7

    (8) statement -> expression . SEMI
    (128) location -> expression . DOT NAME
    SEMI            shift and go to state 36
    DOT             shift and go to state 37


state 8

    (9) statement -> const_definition .
    CONST           reduce using rule 9 (statement -> const_definition .)
    VAR             reduce using rule 9 (statement -> const_definition .)
    PRINT           reduce using rule 9 (statement -> const_definition .)
    NAME            reduce using rule 9 (statement -> const_definition .)
    LBRACE          reduce using rule 9 (statement -> const_definition .)
    MINUS           reduce using rule 9 (statement -> const_definition .)
    LNOT            reduce using rule 9 (statement -> const_definition .)
    LPAREN          reduce using rule 9 (statement -> const_definition .)
    FALSE           reduce using rule 9 (statement -> const_definition .)
    TRUE            reduce using rule 9 (statement -> const_definition .)
    CHAR            reduce using rule 9 (statement -> const_definition .)
    FLOAT           reduce using rule 9 (statement -> const_definition .)
    INTEGER         reduce using rule 9 (statement -> const_definition .)
    MATCH           reduce using rule 9 (statement -> const_definition .)
    $end            reduce using rule 9 (statement -> const_definition .)
    RBRACE          reduce using rule 9 (statement -> const_definition .)


state 9

    (10) statement -> variable_definition .
    CONST           reduce using rule 10 (statement -> variable_definition .)
    VAR             reduce using rule 10 (statement -> variable_definition .)
    PRINT           reduce using rule 10 (statement -> variable_definition .)
    NAME            reduce using rule 10 (statement -> variable_definition .)
    LBRACE          reduce using rule 10 (statement -> variable_definition .)
    MINUS           reduce using rule 10 (statement -> variable_definition .)
    LNOT            reduce using rule 10 (statement -> variable_definition .)
    LPAREN          reduce using rule 10 (statement -> variable_definition .)
    FALSE           reduce using rule 10 (statement -> variable_definition .)
    TRUE            reduce using rule 10 (statement -> variable_definition .)
    CHAR            reduce using rule 10 (statement -> variable_definition .)
    FLOAT           reduce using rule 10 (statement -> variable_definition .)
    INTEGER         reduce using rule 10 (statement -> variable_definition .)
    MATCH           reduce using rule 10 (statement -> variable_definition .)
    $end            reduce using rule 10 (statement -> variable_definition .)
    RBRACE          reduce using rule 10 (statement -> variable_definition .)


state 10

    (11) statement -> assignment_statement .
    CONST           reduce using rule 11 (statement -> assignment_statement .)
    VAR             reduce using rule 11 (statement -> assignment_statement .)
    PRINT           reduce using rule 11 (statement -> assignment_statement .)
    NAME            reduce using rule 11 (statement -> assignment_statement .)
    LBRACE          reduce using rule 11 (statement -> assignment_statement .)
    MINUS           reduce using rule 11 (statement -> assignment_statement .)
    LNOT            reduce using rule 11 (statement -> assignment_statement .)
    LPAREN          reduce using rule 11 (statement -> assignment_statement .)
    FALSE           reduce using rule 11 (statement -> assignment_statement .)
    TRUE            reduce using rule 11 (statement -> assignment_statement .)
    CHAR            reduce using rule 11 (statement -> assignment_statement .)
    FLOAT           reduce using rule 11 (statement -> assignment_statement .)
    INTEGER         reduce using rule 11 (statement -> assignment_statement .)
    MATCH           reduce using rule 11 (statement -> assignment_statement .)
    $end            reduce using rule 11 (statement -> assignment_statement .)
    RBRACE          reduce using rule 11 (statement -> assignment_statement .)


state 11

    (12) statement -> print_statement .
    CONST           reduce using rule 12 (statement -> print_statement .)
    VAR             reduce using rule 12 (statement -> print_statement .)
    PRINT           reduce using rule 12 (statement -> print_statement .)
    NAME            reduce using rule 12 (statement -> print_statement .)
    LBRACE          reduce using rule 12 (statement -> print_statement .)
    MINUS           reduce using rule 12 (statement -> print_statement .)
    LNOT            reduce using rule 12 (statement -> print_statement .)
    LPAREN          reduce using rule 12 (statement -> print_statement .)
    FALSE           reduce using rule 12 (statement -> print_statement .)
    TRUE            reduce using rule 12 (statement -> print_statement .)
    CHAR            reduce using rule 12 (statement -> print_statement .)
    FLOAT           reduce using rule 12 (statement -> print_statement .)
    INTEGER         reduce using rule 12 (statement -> print_statement .)
    MATCH           reduce using rule 12 (statement -> print_statement .)
    $end            reduce using rule 12 (statement -> print_statement .)
    RBRACE          reduce using rule 12 (statement -> print_statement .)


state 12

    (56) expression -> orterm . _11_repeat
    (57) _11_repeat -> . _11_items
    (58) _11_repeat -> .
    (59) _11_items -> . _11_items _11_item
    (60) _11_items -> . _11_item
    (61) _11_item -> . LOR orterm
  ! shift/reduce conflict for LOR resolved as shift
    SEMI            reduce using rule 58 (_11_repeat -> .)
    DOT             reduce using rule 58 (_11_repeat -> .)
    RPAREN          reduce using rule 58 (_11_repeat -> .)
    DIVIDE          reduce using rule 58 (_11_repeat -> .)
    TIMES           reduce using rule 58 (_11_repeat -> .)
    MINUS           reduce using rule 58 (_11_repeat -> .)
    PLUS            reduce using rule 58 (_11_repeat -> .)
    NE              reduce using rule 58 (_11_repeat -> .)
    EQ              reduce using rule 58 (_11_repeat -> .)
    GE              reduce using rule 58 (_11_repeat -> .)
    GT              reduce using rule 58 (_11_repeat -> .)
    LE              reduce using rule 58 (_11_repeat -> .)
    LT              reduce using rule 58 (_11_repeat -> .)
    LAND            reduce using rule 58 (_11_repeat -> .)
    LBRACE          reduce using rule 58 (_11_repeat -> .)
    COMMA           reduce using rule 58 (_11_repeat -> .)
    LOR             shift and go to state 41

    _11_repeat                     shift and go to state 38
    _11_items                      shift and go to state 39
    _11_item                       shift and go to state 40

state 13

    (21) const_definition -> CONST . NAME _4_optional ASSIGN expression SEMI
    NAME            shift and go to state 42


state 14

    (129) location -> NAME .
    (107) factor -> NAME . LPAREN exprlist RPAREN
    (130) enum_value -> NAME . DCOLON NAME LPAREN expression RPAREN
    (131) enum_value -> NAME . DCOLON NAME
    ASSIGN          reduce using rule 129 (location -> NAME .)
    DIVIDE          reduce using rule 129 (location -> NAME .)
    TIMES           reduce using rule 129 (location -> NAME .)
    MINUS           reduce using rule 129 (location -> NAME .)
    PLUS            reduce using rule 129 (location -> NAME .)
    NE              reduce using rule 129 (location -> NAME .)
    EQ              reduce using rule 129 (location -> NAME .)
    GE              reduce using rule 129 (location -> NAME .)
    GT              reduce using rule 129 (location -> NAME .)
    LE              reduce using rule 129 (location -> NAME .)
    LT              reduce using rule 129 (location -> NAME .)
    LAND            reduce using rule 129 (location -> NAME .)
    LOR             reduce using rule 129 (location -> NAME .)
    SEMI            reduce using rule 129 (location -> NAME .)
    DOT             reduce using rule 129 (location -> NAME .)
    LPAREN          shift and go to state 43
    DCOLON          shift and go to state 44


state 15

    (15) variable_definition -> VAR . NAME type _2_optional SEMI
    (18) variable_definition -> VAR . NAME _3_optional ASSIGN expression SEMI
    NAME            shift and go to state 45


state 16

    (14) assignment_statement -> location . ASSIGN expression SEMI
    (114) factor -> location .
    ASSIGN          shift and go to state 46
    DIVIDE          reduce using rule 114 (factor -> location .)
    TIMES           reduce using rule 114 (factor -> location .)
    MINUS           reduce using rule 114 (factor -> location .)
    PLUS            reduce using rule 114 (factor -> location .)
    NE              reduce using rule 114 (factor -> location .)
    EQ              reduce using rule 114 (factor -> location .)
    GE              reduce using rule 114 (factor -> location .)
    GT              reduce using rule 114 (factor -> location .)
    LE              reduce using rule 114 (factor -> location .)
    LT              reduce using rule 114 (factor -> location .)
    LAND            reduce using rule 114 (factor -> location .)
    LOR             reduce using rule 114 (factor -> location .)
    SEMI            reduce using rule 114 (factor -> location .)
    DOT             reduce using rule 114 (factor -> location .)


state 17

    (13) print_statement -> PRINT . expression SEMI
    (56) expression -> . orterm _11_repeat
    (62) orterm -> . andterm _12_repeat
    (68) andterm -> . sumterm _13_repeat
    (80) sumterm -> . multerm _14_repeat
    (86) sumterm -> . multerm _15_repeat
    (92) multerm -> . factor _16_repeat
    (98) multerm -> . factor _17_repeat
    (106) factor -> . LBRACE statements RBRACE
    (107) factor -> . NAME LPAREN exprlist RPAREN
    (108) factor -> . MINUS expression
    (109) factor -> . LNOT expression
    (110) factor -> . LPAREN expression RPAREN
    (111) factor -> . literal
    (112) factor -> . match
    (113) factor -> . enum_value
    (114) factor -> . location
    (115) literal -> . FALSE
    (116) literal -> . TRUE
    (117) literal -> . CHAR
    (118) literal -> . FLOAT
    (119) literal -> . INTEGER
    (120) literal -> . LPAREN RPAREN
    (132) match -> . MATCH expression LBRACE _19_repeat RBRACE
    (130) enum_value -> . NAME DCOLON NAME LPAREN expression RPAREN
    (131) enum_value -> . NAME DCOLON NAME
    (128) location -> . expression DOT NAME
    (129) location -> . NAME
    LBRACE          shift and go to state 22
    NAME            shift and go to state 48
    MINUS           shift and go to state 24
    LNOT            shift and go to state 25
    LPAREN          shift and go to state 23
    FALSE           shift and go to state 29
    TRUE            shift and go to state 30
    CHAR            shift and go to state 31
    FLOAT           shift and go to state 32
    INTEGER         shift and go to state 33
    MATCH           shift and go to state 34

    expression                     shift and go to state 47
    orterm                         shift and go to state 12
    andterm                        shift and go to state 18
    sumterm                        shift and go to state 19
    multerm                        shift and go to state 20
    factor                         shift and go to state 21
    literal                        shift and go to state 26
    match                          shift and go to state 27
    enum_value                     shift and go to state 28
    location                       shift and go to state 49

state 18

    (62) orterm -> andterm . _12_repeat
    (63) _12_repeat -> . _12_items
    (64) _12_repeat -> .
    (65) _12_items -> . _12_items _12_item
    (66) _12_items -> . _12_item
    (67) _12_item -> . LAND andterm
  ! shift/reduce conflict for LAND resolved as shift
    SEMI            reduce using rule 64 (_12_repeat -> .)
    DOT             reduce using rule 64 (_12_repeat -> .)
    RPAREN          reduce using rule 64 (_12_repeat -> .)
    DIVIDE          reduce using rule 64 (_12_repeat -> .)
    TIMES           reduce using rule 64 (_12_repeat -> .)
    MINUS           reduce using rule 64 (_12_repeat -> .)
    PLUS            reduce using rule 64 (_12_repeat -> .)
    NE              reduce using rule 64 (_12_repeat -> .)
    EQ              reduce using rule 64 (_12_repeat -> .)
    GE              reduce using rule 64 (_12_repeat -> .)
    GT              reduce using rule 64 (_12_repeat -> .)
    LE              reduce using rule 64 (_12_repeat -> .)
    LT              reduce using rule 64 (_12_repeat -> .)
    LOR             reduce using rule 64 (_12_repeat -> .)
    LBRACE          reduce using rule 64 (_12_repeat -> .)
    COMMA           reduce using rule 64 (_12_repeat -> .)
    LAND            shift and go to state 53

    _12_repeat                     shift and go to state 50
    _12_items                      shift and go to state 51
    _12_item                       shift and go to state 52

state 19

    (68) andterm -> sumterm . _13_repeat
    (69) _13_repeat -> . _13_items
    (70) _13_repeat -> .
    (71) _13_items -> . _13_items _13_item
    (72) _13_items -> . _13_item
    (73) _13_item -> . compare_op sumterm
    (74) compare_op -> . NE
    (75) compare_op -> . EQ
    (76) compare_op -> . GE
    (77) compare_op -> . GT
    (78) compare_op -> . LE
    (79) compare_op -> . LT
  ! shift/reduce conflict for NE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for LT resolved as shift
    SEMI            reduce using rule 70 (_13_repeat -> .)
    DOT             reduce using rule 70 (_13_repeat -> .)
    RPAREN          reduce using rule 70 (_13_repeat -> .)
    DIVIDE          reduce using rule 70 (_13_repeat -> .)
    TIMES           reduce using rule 70 (_13_repeat -> .)
    MINUS           reduce using rule 70 (_13_repeat -> .)
    PLUS            reduce using rule 70 (_13_repeat -> .)
    LAND            reduce using rule 70 (_13_repeat -> .)
    LOR             reduce using rule 70 (_13_repeat -> .)
    LBRACE          reduce using rule 70 (_13_repeat -> .)
    COMMA           reduce using rule 70 (_13_repeat -> .)
    NE              shift and go to state 58
    EQ              shift and go to state 59
    GE              shift and go to state 60
    GT              shift and go to state 61
    LE              shift and go to state 62
    LT              shift and go to state 63

    _13_repeat                     shift and go to state 54
    _13_items                      shift and go to state 55
    _13_item                       shift and go to state 56
    compare_op                     shift and go to state 57

state 20
